--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -20,6 +20,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'account/login/login.scss';
 @import 'admin/admin.scss';
 @import 'albumDetail/albumDetail.scss';
+@import 'albums/albums.scss';
 @import 'main/main.scss';
 @import 'overview/overview.scss';
 @import 'modal/modal.scss';
