--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -21,6 +21,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'admin/admin.scss';
 @import 'albumDetail/albumDetail.scss';
 @import 'albums/albums.scss';
+@import 'createAlbum/createAlbum.scss';
 @import 'main/main.scss';
 @import 'overview/overview.scss';
 @import 'modal/modal.scss';
